# fhe-noise-analysis

./: .gitignore  CMakeLists.txt  README.md  server.py
docs/: metadata.yaml  rapport.md
docs/descriptif/: docker-compose.yml  projet.typ  refs.bib  uqac.typ
docs/pres/: 04_conclusion.typ
docs/rapport/: compose.yml
docs/rapport-typst/: 01_introduction.typ  02_theorie.typ  03_archi.typ  04_analyses.typ  05_conclusion.typ  docker-compose.yml  rapport.typ
pres/: 01_introduction.typ  02_architecture.typ  03_demonstration.typ  04_conclusion.typ  presentation.typ
src/: main.cpp
